# ai-eval-harness

./: .gitignore  README.md  pyproject.toml
ai_eval_harness/agents/: anthropic_agent.py  base.py  openai_agent.py  registry.py
ai_eval_harness/benchmarks/: __init__.py
ai_eval_harness/benchmarks/gaia/: benchmark.py  dataloader.py  scorer.py  tools.py
ai_eval_harness/benchmarks/tau2_bench/: __init__.py  benchmark.py
ai_eval_harness/benchmarks/tau_bench/: benchmark.py  user_simulator.py
ai_eval_harness/benchmarks/tau_bench/domains/: paypal.py  retail.py
ai_eval_harness/core/: agent.py  benchmark.py  config.py  types.py
ai_eval_harness/metrics/: __init__.py  aggregator.py
ai_eval_harness/trace/: logger.py
configs/: gaia.yaml  tau2_bench.yaml  tau_bench.yaml
examples/: custom_agent.py
scripts/: run_benchmark.py
